--- a/practice/style.css
+++ b/practice/style.css
@@ -1,55 +1,123 @@
-ul {
-    list-style: none;
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: 'Courier New', Courier, monospace;
 }
-a{
-    text-decoration: none;
-    color: #000;
-
+body{
+  background: #081b29;
+  color: #ededed;
 }
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: #333;
-    padding: 20px 24px;
-   
-   
+ /*styling for navbar*/
+ .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 10%;
+  background:transparent;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
 }
-
-/* Style the links inside the navigation bar */
-.topnav a {
-
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+.logo {
+  font-size: 25px;
+  color:#ededed;
   text-decoration: none;
-  font-size: 17px;
+  font-weight: 600;
+}
+.navbar a{
+  font-size: 18px;
+  color: #ededed;
+  text-decoration: none;
+  font-weight: 500;
+  margin-left: 35px;
+  transition: .3s;
+}
+.navbar a:hover,
+.navbar a.active{
+  color: #00abf0;
+}
+/* end of navbar*/
+
+
+/* styling for the home content */
+.home {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  padding: 0 10%;
+}
+.home-content {
+  max-width:600px;
+}
+.home-content h1{
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 1.2; 
+}
+.home-content h3{
+  font-size: 32px;
+  font-weight: 700;
+  color: #00abf0;
+}
+.home-content p{
+  font-size: 16px;
+  margin: 20px 0 40px;
+}
+/*styling button*/
+.home-content .btn-box{
+  display: flex;
+  justify-content: space-between;
+  width: 345px;
+  height: 50px;
+}
+.btn-box a{
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 100%;
+  background: #00abf0;
+  border: 1px solid #00abf0;
+  border-radius: 8px;
+  font-size: 19px;
+  color: #081b29;
+  text-decoration: none;
+  font-weight: 600;
+  letter-spacing: 1px;
+  z-index: 1;
+  overflow: hidden;
+  transition: .5s;
+}
+.btn-box a:hover{
+  color: #00abf0;
+}
+.btn-box a:nth-child(2){
+  background: transparent;
+  color: #00abf0;
+}
+.btn-box a:nth-child(2):hover{
+  color: #081b29;
+}
+.btn-box a:nth-child(2)::before{
+  background:#00abf0;
+}
+.btn-box a::before{
+  content: "";
+  position:absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #081b29;
+  z-index: -1;
+  transition: .5s;
+}
+.btn-box a:hover::before{
+  width: 100%;
 }
 
-/* Change the color of links on hover */
-.nav_right a:hover {
-  background-color: #ddd;
-  color: black;
-}
 
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-.topnav a.active:hover {
-background-color: #06f69e;
-}
-.nav_right {
-    float: right;
-   
-}
-#img_logo { 
-    background-color: #fff;
-    align-items: center;
-    justify-content: center;
-}
-#title_name {
-    margin-left: 3rem;
-    font-size: 20px;
-}
-
-/* Right-aligned section inside the top navigation */
